--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,11 @@
 
   <body>
     <main class="flex items-center justify-center flex-col">
+      <%= render "layouts/navbar" %>
        <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
       <%= yield %>
+
     </main>
   </body>
 </html>
