Add Inventory to shopping list and layout

--- a/app/views/inventories/new.html.erb
+++ b/app/views/inventories/new.html.erb
@@ -12,7 +12,7 @@
       <%= f.text_area :description, rows: 4 %>
     </div>
   
-    <%= f.submit "Add Inventory", class: "submitin" %>
+    <%= f.submit "Create Inventory", class: "submitin" %>
   
     <% end %>
   </div>
