--- a/app/views/inventories/index.html.erb
+++ b/app/views/inventories/index.html.erb
@@ -1,3 +1,4 @@
+<h1>Welcome To Inventory Page</h1>
 <div class="inventories">
   <div class="new-link">
     <%= link_to 'Create New Inventory', new_inventory_path %>
