--- a/app/views/recipes/public_recipes.html.erb
+++ b/app/views/recipes/public_recipes.html.erb
@@ -1,12 +1,16 @@
 <div class="public-recipes">
-  <% @public_recipes.each do |recipe| %>
-    <%= link_to recipe_path(recipe) do %>
-      <h2 class="title"><%= recipe.name %></h2>
-      <p>By: <%= recipe.user.name %></p>
-      <div class="description">
-        <p>Food Items Count: <%= recipe.recipe_foods.count %></p>
-        <p>Total Price: $<%= recipe.recipe_foods.sum { |rf| rf.quantity * rf.food.price } %></p>
-      </div>
+  <% if @public_recipes.empty? %>
+    <h1>No public recipes available.</h1>
+  <% else %>
+    <% @public_recipes.each do |recipe| %>
+      <%= link_to recipe_path(recipe) do %>
+        <h2 class="title"><%= recipe.name %></h2>
+        <p>By: <%= recipe.user.name %></p>
+        <div class="description">
+          <p>Food Items Count: <%= recipe.recipe_foods.count %></p>
+          <p>Total Price: $<%= recipe.recipe_foods.sum { |rf| rf.quantity * rf.food.price } %></p>
+        </div>
+      <% end %>
     <% end %>
   <% end %>
 </div>
