--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,15 +1,22 @@
-<%= form_with model: @food, url: foods_path do |form| %>
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
-  </div>
-    <div class="field">
-    <%= form.label :measurement_unit %>
-    <%= form.text_field :measurement_unit %>
-  </div>
-  <div class="field">
-    <%= form.label :price %>
-    <%= form.text_field :price %>
-  </div>
-  <%= form.submit "Add Food" %>
-<% end %>
+<div class="bg-white p-6 rounded-lg shadow-md mt-4">
+  <h1 class="text-3xl font-semibold mb-5 flex justify-center">Add Food</h1>
+
+  <%= form_with model: @food, url: foods_path, class: "mt-5" do |form| %>
+    <div class="space-y-4">
+      <div class="flex flex-col">
+        <%= form.label :name, class: "text-lg font-medium text-gray-600 mb-2" %>
+          <%= form.text_field :name, class: "w-full p-3 rounded-lg border border-gray-300" %>
+      </div>
+      <div class="flex flex-col">
+        <%= form.label :measurement_unit, class: "text-lg font-medium text-gray-600 mb-2" %>
+          <%= form.text_field :measurement_unit, class: "w-full p-3 rounded-lg border border-gray-300" %>
+      </div>
+      <div class="flex flex-col">
+        <%= form.label :price, class: "text-lg font-medium text-gray-600 mb-2" %>
+          <%= form.text_field :price, class: "w-full p-3 rounded-lg border border-gray-300" %>
+      </div>
+      <%= form.submit "Add Food" ,
+        class: "mt-5 px-6 py-3 bg-blue-500 hover:bg-blue-600 text-white font-medium rounded-lg" %>
+    </div>
+    <% end %>
+</div>
