--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,12 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body class="bg-slate-400">
     <main class="flex items-center justify-center flex-col">
       <%= render "layouts/navbar" %>
        <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
       <%= yield %>
-
     </main>
   </body>
 </html>
