--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,23 +1,30 @@
-<h1>Add New Recipe</h1>
+<div class="bg-white p-6 rounded-lg shadow-md md:w-[50%] mt-3">
+    <h1 class="text-3xl font-extrabold mb-5 text-gray-800">Add New Recipe</h1>
 
-<%= form_with model: @recipe, url: recipes_path do |form| %>
-    <p>
-        <%= form.label :name %><br>
-            <%= form.text_field :name %>
-    </p>
-    <p>
-        <%= form.label :preparation_time %><br>
-            <%= form.number_field :preparation_time, step: '0.01' %>
-    </p>
-    <p>
-        <%= form.label :cooking_time %><br>
-        <%= form.number_field :cooking_time, step: '0.01' %>
-    </p>
-    <p>
-        <%= form.label :description %><br>
-            <%= form.text_area :description %>
-    </p>
-    <p>
-        <%= form.submit %>
-    </p>
-    <% end %>
+    <%= form_with model: @recipe, url: recipes_path, class: "text-gray-800" do |form| %>
+        <div class="mb-4">
+            <%= form.label :name, class: "text-lg font-medium" %>
+                <%= form.text_field :name,
+                    class: "w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500" %>
+        </div>
+        <div class="mb-4">
+            <%= form.label :preparation_time, class: "text-lg font-medium" %>
+                <%= form.number_field :preparation_time, step: '0.01' ,
+                    class: "w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500" %>
+        </div>
+        <div class="mb-4">
+            <%= form.label :cooking_time, class: "text-lg font-medium" %>
+                <%= form.number_field :cooking_time, step: '0.01' ,
+                    class: "w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500" %>
+        </div>
+        <div class="mb-4">
+            <%= form.label :description, class: "text-lg font-medium" %>
+                <%= form.text_area :description,
+                    class: "w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500" %>
+        </div>
+        <div class="mb-4">
+            <%= form.submit "Add Recipe" ,
+                class: "px-4 py-2 bg-blue-500 hover:bg-blue-600 text-white font-medium rounded-lg cursor-pointer" %>
+        </div>
+        <% end %>
+</div>
