Add Style with Tailwind For UI

--- a/app/views/recipes/public_recipes.html.erb
+++ b/app/views/recipes/public_recipes.html.erb
@@ -1,5 +1,5 @@
 <div class="bg-slate-400 p-6 flex justify-center items-center flex-col">
-  <h1 class="text-5xl font-semibold mb-5 text-slate-900 ">Public Recipes</h1>
+  <h1 class="lg:text-5xl font-semibold mb-5 text-slate-900 text-2xl ">Public Recipes</h1>
 
   <div class="bg-slate-100 p-4 rounded-lg">
     <% if @public_recipes.empty? %>
