--- a/app/views/inventories/index.html.erb
+++ b/app/views/inventories/index.html.erb
@@ -1,5 +1,5 @@
 <div class="text-center">
-  <h1 class="text-4xl font-bold text-black my-8">Welcome To Inventory Page</h1>
+  <h1 class="lg:text-4xl font-bold text-black my-8 text-xl">Welcome To Inventory Page</h1>
 </div>
 
 <div class="flex flex-col items-center mt-2">
