Update button text

--- a/app/views/inventories/show.html.erb
+++ b/app/views/inventories/show.html.erb
@@ -1,7 +1,7 @@
 <div class="show-inventory">
   <h2 class="title"><%= @inventory.name %></h2>
   <div class="food-add">
-    <%= link_to "Add Food", new_inventory_inventory_food_path(@inventory)%>
+    <%= link_to "Add Inventory Food", new_inventory_inventory_food_path(@inventory)%>
   </div>
   <div class="flex flex-col">
     <div class="overflow-x-auto sm:-mx-6 lg:-mx-8">
